# docs/swagger.json
@@ -62,7 +62,47 @@
                 }
             }
         },
-        "/shorten-url": {
+        "/links/redirect/{code}": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "URL Shortener"
+                ],
+                "summary": "Get Original URL",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Shortened URL code",
+                        "name": "code",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "301": {
+                        "description": "Redirect to original URL",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/links/shorten": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -89,7 +129,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.shortenURLResponse"
+                            "$ref": "#/definitions/handler.shortenURLRequest"
                         }
                     },
                     "400": {
@@ -127,22 +167,16 @@
         },
         "handler.shortenURLRequest": {
             "type": "object",
+            "required": [
+                "exp_time",
+                "url"
+            ],
             "properties": {
                 "exp_time": {
-                    "type": "integer"
+                    "type": "integer",
+                    "minimum": 1
                 },
                 "url": {
-                    "type": "string"
-                }
-            }
-        },
-        "handler.shortenURLResponse": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "string"
-                },
-                "message": {
                     "type": "string"
                 }
             }
